<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ScanActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="46dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/image_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/image_scan"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />


    <ImageView
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/cameras"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_photo"
        app:tint="@color/blue"
        android:contentDescription="@string/camera"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/robotoslab_regular"
        android:text="@string/camera"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="88dp"
        android:contentDescription="@string/gallery"
        android:src="@drawable/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_photo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/robotoslab_regular"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/blue"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>